fix make flags, more work on models
still can't get GLEW working properly on this stupid computer, so I
can't enable any OpenGL features, even up to 2.1 (which is all
VirtualBox provides, the jerks)

--- a/Makefile.main
+++ b/Makefile.main
@@ -1,12 +1,13 @@
+CC=gcc
+CFLAGS=-O0 -Wall -pedantic -ggdb
+
 target=main.o
 ifdef USE_GLEW
-libraries=sdl2 glew
+ libraries=sdl2 glew
+ CFLAGS:=-DUSE_GLEW $(CFLAGS)
 else
-libraries=sdl2 gl glu
+ libraries=sdl2 gl glu
 endif
-
-CC=gcc
-CFLAGS=-O0 -Wall -pedantic
 
 CFLAGS:=$(shell pkg-config --cflags $(libraries)) $(CFLAGS)
 LDLIBS:=$(shell pkg-config --libs $(libraries)) $(LDLIBS)
