--- a/Makefile.texture
+++ b/Makefile.texture
@@ -1,12 +1,13 @@
-target=texture.o
-ifdef USE_GLEW
-libraries=glew
-else
-libraries=gl glu
-endif
-
 CC=gcc
 CFLAGS=-O0 -Wall -pedantic
+
+target=texture.o
+ifdef USE_GLEW
+ libraries=glew
+ CFLAGS:=-DUSE_GLEW $(CFLAGS)
+else
+ libraries=gl glu
+endif
 
 CFLAGS:=$(shell pkg-config --cflags $(libraries)) $(CFLAGS)
 LDLIBS:=$(shell pkg-config --libs $(libraries)) $(LDLIBS)
